modules/brscript/tests/scripts/analyzer/errors/cyclic_ref_external_a.notest.br
const B = preload("cyclic_ref_external.br")

var v = B.v
